# online-purchase-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.md
notebooks/: 01_eda.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
paper/: main.tex  references.bib  sbc-template.sty
results/: model_comparison.csv
src/: __init__.py  data_loader.py  evaluation.py  models.py  preprocessing.py
